0.5.0
* minForth config.fs/make/fs added
* nci: new module (n-Tree cell iterator) (2007-03-13)
* nct: new module (n-Tree cell tree) (2007-03-13)
* ncn: new module (n-Tree cell node) (2007-03-13)
* nni: new module (n-Tree base iterator) (2007-03-05)
* nnt: new module (n-Tree base module) (2007-03-04)
* nnn: new module (n-Tree base node) (2007-03-04)
* sci: extends sni
* scl: extends snl
* scn: new modules scn-cell! scn-cell@
* scn: extends snn
* sni: new module (Single linked base iterator) (2007-02-27)
* snl: new module (Single linked base list) (2007-02-26)
* snn: new module (Single linked base node) (2007-02-19)
* icompare from str.fs to config.fs (2007-02-06)
* fina config.fs/make.fs added (thanks to Jorge Acereda Macia)
* Manual added to the website
0.4.0:
* dtm: new words dtm-get-date and dtm-get-time
* dtm: dtm-set-with-days bug fix 
* tst: tst-get-result will now also return ms since tst-reset-tests (2007-01-07)
* dci: new module (Double linked cell list iterator) (2007-01-07)
* dni: new module (Double linked base list iterator) (2007-01-03)
* dcl: new module (Double linked cell list) (2006-12-31)
* dcn: new module (Double linked cell list node) (2006-12-31)
* dnl: new module (Double linked base list) (2006-12-28)
* dnn: new module (Double linked base node) (2006-12-28)
* Win32Forth config.fs/make.fs added
* config: new word <=> for comparing numbers (2006-12-12)
* chs: new words chs-set-string,chs-reset-string (2006-12-11)
* Comment cleanup (2006-12-10)
* tmr: new module (Interval timer) (2006-12-8)
* crc: word scr-free renamed to crc-free (bug)
* crc: word crc-start renamed to crc-reset
* sh1: new module (Secure Hash 1) (2006-12-04)
* trm: new module (Terminal escape sequences outputter) (2006-11-17)
* bci: new module (Binary cell tree iterator) (2006-10-03)
* bct: new module (Binary cell tree) (2006-10-03)
* bcn: new module (Binary cell tree node) (2006-10-03)
* act: new module (AVL cell binary tree) (2006-09-24)